--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Project Details
 1. Currently project is developed against BRMS 5.0.2 libraries
 2. Install Drools Runtime before importing the project
 
+Stay tuned for more details ...
